admin/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: default-deny
  spec:
    podSelector: {}
    ingress:
    - from:
      - podSelector: {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: karteless-allow
  spec:
    podSelector:
      matchlabels:
        app: karteless
    ingress:
      - {}
    policyTypes:
      - Ingress
#- apiVersion: networking.k8s.io/v1
#  kind: NetworkPolicy
#  metadata:
#    name: allow-from-openshift-ingress
#  spec:
#    ingress:
#    - from:
#      - namespaceSelector:
#          matchLabels:
#            network.openshift.io/policy-group: ingress
#    podSelector: {}
#    policyTypes:
#    - Ingress
kind: List
metadata: {}
